--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,13 +118,13 @@ IF(UNIX) # all unix-like O/S's including Apple OS X and MINGW
   
   SET(CMAKE_CXX_FLAGS
 #     "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -march=pentium4 -Wall -Wno-deprecated -D_FILE_OFFSET_BITS=64"
-    "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -m32 -Wall -Wno-deprecated -D_FILE_OFFSET_BITS=64 -fvisibility=hidden"  
+    "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -m32 -Wall -Wno-deprecated -D_FILE_OFFSET_BITS=64"  
     CACHE STRING "options output with mex -v CHANGE IN CMakeLists.txt NOT HERE!"
     FORCE
   )
   SET(CMAKE_C_FLAGS
 #     "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -march=pentium4 -Wall -fexceptions -D_FILE_OFFSET_BITS=64"
-    "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -m32 -Wall -fexceptions -D_FILE_OFFSET_BITS=64 -fvisibility=hidden"  
+    "-fPIC -ansi -D_GNU_SOURCE -DMATLAB_MEX_FILE -pthread -m32 -Wall -fexceptions -D_FILE_OFFSET_BITS=64 "  
     CACHE STRING "options output with mex -v CHANGE IN CMakeLists.txt NOT HERE!"
     FORCE
   )
@@ -141,12 +141,12 @@ IF(UNIX) # all unix-like O/S's including Apple OS X and MINGW
   )
     
   SET(CMAKE_CXX_FLAGS_RELEASE 
-    "-O2 -DNDEBUG -malign-double -ffast-math" 
+    "-O2 -DNDEBUG -malign-double -ffast-math -fvisibility=hidden" 
     CACHE STRING "CHANGE IN CMakeLists.txt NOT HERE"
     FORCE
   )
   SET(CMAKE_C_FLAGS_RELEASE 
-    "-O2 -DNDEBUG -malign-double -ffast-math" 
+    "-O2 -DNDEBUG -malign-double -ffast-math -fvisibility=hidden" 
     CACHE STRING "CHANGE IN CMakeLists.txt NOT HERE"
     FORCE
   )
