start to reorganize class structure for Input/Output
 will change the Input/Output naming scheme

--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -18,6 +18,8 @@ set(convert_visualsonics_bin_srcs  ${convert_visualsonics_srcs}
 
 set(convert_visualsonics_lib_srcs  ${convert_visualsonics_srcs} 
 				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/cxx/parse_vs_rdi.cpp
+				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/InputBase.cpp 
+				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/OutputBase.cpp 
 				    )
 
 add_library( parse_vs_rdi SHARED ${convert_visualsonics_lib_srcs} )
