you don't need to \#include a friend class declaration

--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -10,6 +10,8 @@ set(convert_visualsonics_srcs  ${SPIRIT_PARSE_SRCS}
                                     ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/rdiParser.cpp
                                     ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/rdiParserData.cpp
                                     ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/BoostSpiritInputFile.cpp
+                                    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/cxx/ExtractImage.cpp 
+                                    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/ExtractMetadataBase.cpp 
                                     )
 
 set(convert_visualsonics_bin_srcs  ${convert_visualsonics_srcs} 
@@ -18,8 +20,6 @@ set(convert_visualsonics_bin_srcs  ${convert_visualsonics_srcs}
 
 set(convert_visualsonics_lib_srcs  ${convert_visualsonics_srcs} 
 				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/cxx/parse_vs_rdi.cpp
-				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/InputBase.cpp 
-				    ${CONVERT_VISUALSONICS_2_MAT_SOURCE_DIR}/spirit_parse/OutputBase.cpp 
 				    )
 
 add_library( parse_vs_rdi SHARED ${convert_visualsonics_lib_srcs} )
