--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ INCLUDE(${VTK_USE_FILE})
 
 set( vtk_test_srcs ${base_test_srcs}
   ${read_visualsonics_digital_rf_SOURCE_DIR}/vtk/ReadImage.cpp 
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/vtk/ViewImage.cpp 
   ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/vtk_test.cpp 
   )
 
