move source to source directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,6 @@ SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "*.obj")
 
 ########### set up addition CMakeLists.txt locations #########
 #ADD_SUBDIRECTORY(matlab)
-add_subdirectory(cxx)
+add_subdirectory(source)
 add_subdirectory(tests)
 
