--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
+cmake_minimum_required(VERSION 2.6)
+cmake_policy(VERSION 2.6)
+
+
 project(read_visualsonics_digital_rf)
 
 
 ###########  Install Prefix ############
-SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/.. 
-      CACHE PATH "in the private directory of the VisualSonics2mat Matlab class, set in CMakeLists.txt" 
+SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/..
+      CACHE PATH "in the private directory of the VisualSonics2mat Matlab class, set in CMakeLists.txt"
       FORCE
       )
 
@@ -11,11 +15,11 @@ SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/..
 IF(WIN32)
 SET(CMAKE_C_OUTPUT_EXTENSION ".obj")
 SET(CMAKE_CXX_OUTPUT_EXTENSION ".obj")
-SET(CMAKE_CXX_COMPILE_OBJECT 
-		"mkdir -p <OBJECT_DIR>; <CMAKE_CXX_COMPILER>  -outdir <OBJECT_DIR> <FLAGS> -c <SOURCE> " 
+SET(CMAKE_CXX_COMPILE_OBJECT
+		"mkdir -p <OBJECT_DIR>; <CMAKE_CXX_COMPILER>  -outdir <OBJECT_DIR> <FLAGS> -c <SOURCE> "
 		)
-SET(CMAKE_C_COMPILE_OBJECT 
-		"mkdir -p <OBJECT_DIR>; <CMAKE_C_COMPILER> -outdir <OBJECT_DIR> <FLAGS> -c <SOURCE> " 
+SET(CMAKE_C_COMPILE_OBJECT
+		"mkdir -p <OBJECT_DIR>; <CMAKE_C_COMPILER> -outdir <OBJECT_DIR> <FLAGS> -c <SOURCE> "
 		)
 SET(CMAKE_CXX_CREATE_SHARED_MODULE
 	"<CMAKE_CXX_COMPILER> <LANGUAGE_COMPILE_FLAGS> <LINK_FLAGS> -output <TARGET> <OBJECTS> <LINK_LIBRARIES>"
@@ -23,19 +27,19 @@ SET(CMAKE_CXX_CREATE_SHARED_MODULE
 SET(CMAKE_C_CREATE_SHARED_MODULE
 	"<CMAKE_C_COMPILER> <LANGUAGE_COMPILE_FLAGS> <LINK_FLAGS> -output <TARGET> <OBJECTS> <LINK_LIBRARIES>"
 	)
-	
+
 INCLUDE(CMakePrintSystemInformation)
 ENDIF(WIN32)
 
 ############## Compiling flags ##########
 
-IF(CMAKE_COMPILER_IS_GNUCXX) 
-  
+IF(CMAKE_COMPILER_IS_GNUCXX)
+
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall" )
   SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall" )
-  
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3" ) 
-  SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG}   -ggdb3" ) 
+
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3" )
+  SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG}   -ggdb3" )
 
   SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -DNDEBUG -ffast-math -fvisibility=hidden")
   SET(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE}   -O2 -DNDEBUG -ffast-math -fvisibility=hidden" )
