compiling and linking, but not running correctly :P

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,10 +33,10 @@ INCLUDE(${VTK_USE_FILE})
 
 
 set( vtk_test_srcs ${base_test_srcs}
-  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/ImageReader.cpp
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vtkVisualSonicsReader.cpp
   ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/ImageViewer.cpp
   ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/vtk_test.cpp
   )
 
 add_executable( vtk_test ${vtk_test_srcs} )
-target_link_libraries( vtk_test vtkRendering )
+target_link_libraries( vtk_test vtkRendering boost_filesystem)
