--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.6)
-cmake_policy(VERSION 2.6)
+#cmake_minimum_required(VERSION 2.6)
+#cmake_policy(VERSION 2.6)
 
 
 project(read_visualsonics_digital_rf)
