--- a/source/vtk/CMakeLists.txt
+++ b/source/vtk/CMakeLists.txt
@@ -4,7 +4,7 @@ set(spirit_parse_source_dir ${read_visualsonics_digital_rf_SOURCE_DIR}/source/co
 include_directories( ${read_visualsonics_digital_rf_SOURCE_DIR}/source )
 
 
-set(base_test_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
+set(base_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
                                     ${spirit_parse_source_dir}/BoostSpiritInputFile.cpp
                                     ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/Interpolation.cpp
                                     ${read_visualsonics_digital_rf_SOURCE_DIR}/source/common/interpolation/NearestNeighbor.cpp
@@ -17,28 +17,20 @@ set(base_test_srcs  ${spirit_parse_source_dir}/rdiParser.cpp
 
 
 
-set( cxx_test_srcs ${base_test_srcs}
-  ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/cxx_test.cpp )
+find_package(VTK REQUIRED)
+if(NOT VTK_USE_RENDERING)
+  message(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
+endif(NOT VTK_USE_RENDERING)
+include(${VTK_USE_FILE})
 
-#add_executable( cxx_test ${cxx_test_srcs} )
-#target_link_libraries( convert_visualsonics_test parse_vs_rdi )
 
 
+set( vs-vtk-viewer_srcs ${base_srcs}
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vtkVisualSonicsReader.cpp
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/ImageViewer.cpp
+  ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vs-vtk-viewer.cpp
+  )
 
-if(USE_VTK)
-  find_package(VTK REQUIRED)
-  if(NOT VTK_USE_RENDERING)
-    message(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
-  endif(NOT VTK_USE_RENDERING)
-  include(${VTK_USE_FILE})
-  
-  
-  set( vtk_test_srcs ${base_test_srcs}
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/vtkVisualSonicsReader.cpp
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/source/vtk/ImageViewer.cpp
-    ${read_visualsonics_digital_rf_SOURCE_DIR}/tests/vtk_test.cpp
-    )
-  
-  add_executable( vtk_test ${vtk_test_srcs} )
-  target_link_libraries( vtk_test vtkRendering boost_filesystem)
-endif(USE_VTK)
+add_executable( vs-vtk-viewer ${vs-vtk-viewer_srcs} )
+target_link_libraries( vs-vtk-viewer vtkRendering boost_filesystem)
+
