--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 2.6)
-cmake_policy(VERSION 2.6)
+#cmake_minimum_required(VERSION 2.6)
+#cmake_policy(VERSION 2.6)
 
 
-project(read_visualsonics_digital_rf CXX)
+project(read_visualsonics_digital_rf)
 
 
 ###########  Install Prefix ############
