if command cmake-policy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
-cmake_minimum_required(VERSION 2.6)
-if( COMMAND cmake_policy )
-  cmake_policy(VERSION 2.6)
-endif( COMMAND cmake_policy )
+#cmake_minimum_required(VERSION 2.6)
+#cmake_policy(VERSION 2.6)
 
 
 project(read_visualsonics_digital_rf)
