remove include(USE_VTK_FILE) add CTest
was changing compiler and compiler flags to the vtk build settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,5 +67,9 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY
 ########### set up addition CMakeLists.txt locations #########
 #ADD_SUBDIRECTORY(matlab)
 add_subdirectory(source)
-add_subdirectory(tests)
+
+include(CTest)
+if(BUILD_TESTING)
+  add_subdirectory(tests)
+endif(BUILD_TESTING)
 
